--- a/RedGate.AppHost.Example.Client/RedGate.AppHost.Example.Client.csproj
+++ b/RedGate.AppHost.Example.Client/RedGate.AppHost.Example.Client.csproj
@@ -47,7 +47,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IServerImplementedThingThatClientNeeds.cs" />
+    <Compile Include="OutOfProcessEntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl1.xaml.cs">
       <DependentUpon>UserControl1.xaml</DependentUpon>
@@ -58,6 +59,12 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RedGate.AppHost.Interfaces\RedGate.AppHost.Interfaces.csproj">
+      <Project>{3084d987-50dd-43a5-9cf3-ce550513f8d0}</Project>
+      <Name>RedGate.AppHost.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(RedGate_BuildTargetsPath)" Condition="'$(BuildingInsideVisualStudio)' == ''" />
