--- a/RedGate.AppHost.Example.Server/RedGate.AppHost.Example.Server.csproj
+++ b/RedGate.AppHost.Example.Server/RedGate.AppHost.Example.Server.csproj
@@ -57,6 +57,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ServerImplementedThingThatClientNeeds.cs" />
+    <Compile Include="ServiceLocator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
