--- a/RedGate.AppHost.Interfaces/RedGate.AppHost.Interfaces.csproj
+++ b/RedGate.AppHost.Interfaces/RedGate.AppHost.Interfaces.csproj
@@ -34,17 +34,22 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.AddIn.Contract" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAppHostChildHandle.cs" />
+    <Compile Include="IOutOfProcessEntryPoint.cs" />
     <Compile Include="ISafeAppHostChildHandle.cs" />
     <Compile Include="IAppHostServices.cs" />
     <Compile Include="INativeHandleContractWithoutIntPtr.cs" />
