Fix up paths for build server

--- a/NuSpec/RedGate.PhoneGap.Build.Client.nuspec
+++ b/NuSpec/RedGate.PhoneGap.Build.Client.nuspec
@@ -33,6 +33,6 @@
     <file src="RedGate.AppHost.Remoting.WPF.pdb" target="lib" />
     <file src="RedGate.AppHost.Server.dll" target="lib" />
     <file src="RedGate.AppHost.Server.pdb" target="lib" />
-    <file src="..\Install\RedGate.AppHost.wxs" target="WiX2\RedGate.AppHost.wxs" />
+    <file src="RedGate.AppHost.wxs" target="WiX2\RedGate.AppHost.wxs" />
   </files>
 </package>
