Rename some things now that I know what they are

--- a/RedGate.AppHost.Client/RedGate.AppHost.Client.csproj
+++ b/RedGate.AppHost.Client/RedGate.AppHost.Client.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleNativeMethods.cs" />
-    <Compile Include="SafeAppHostChildHandle.cs" />
+    <Compile Include="SafeChildProcessHandle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
