Move to server, as it is only ever needed by the 'host' application

--- a/RedGate.AppHost.Server/RedGate.AppHost.Server.csproj
+++ b/RedGate.AppHost.Server/RedGate.AppHost.Server.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ChildProcessHandle.cs" />
     <Compile Include="ChildProcessFactory.cs" />
+    <Compile Include="IChildProcessHandle.cs" />
     <Compile Include="Job.cs" />
     <Compile Include="Native.cs" />
     <Compile Include="ProcessExtensions.cs" />
