--- a/NuSpec/RedGate.AppHost.nuspec
+++ b/NuSpec/RedGate.AppHost.nuspec
@@ -23,6 +23,7 @@
   <files>
     <file src="RedGate.AppHost.Example.Client.dll" target="lib" />
     <file src="RedGate.AppHost.Example.Server.exe" target="lib" />
+    <file src="RedGate.AppHost.Example.Remote.Services.dll" target="lib" />
     <file src="RedGate.AppHost.Client.exe" target="lib" />
     <file src="RedGate.AppHost.Client.pdb" target="lib" />
     <file src="RedGate.AppHost.Interfaces.dll" target="lib" />
