--- a/NuSpec/RedGate.AppHost.nuspec
+++ b/NuSpec/RedGate.AppHost.nuspec
@@ -13,6 +13,7 @@
     <references>
       <reference file="RedGate.AppHost.Server.dll" />
       <reference file="RedGate.AppHost.Client.exe" />
+      <reference file="RedGate.AppHost.Client.x64.exe" />
       <reference file="RedGate.AppHost.Interfaces.dll" />
       <reference file="RedGate.AppHost.Remoting.WPF.dll" />
     </references>
@@ -26,6 +27,8 @@
     <file src="RedGate.AppHost.Example.Remote.Services.dll" target="lib" />
     <file src="RedGate.AppHost.Client.exe" target="lib" />
     <file src="RedGate.AppHost.Client.pdb" target="lib" />
+    <file src="RedGate.AppHost.Client.x64.exe" target="lib" />
+    <file src="RedGate.AppHost.Client.x64.pdb" target="lib" />
     <file src="RedGate.AppHost.Interfaces.dll" target="lib" />
     <file src="RedGate.AppHost.Interfaces.pdb" target="lib" />
     <file src="RedGate.AppHost.Remoting.dll" target="lib" />
