Add a 64-bit version of the process starter, rename the 32-bit version

--- a/RedGate.AppHost.Server/RedGate.AppHost.Server.csproj
+++ b/RedGate.AppHost.Server/RedGate.AppHost.Server.csproj
@@ -56,7 +56,8 @@
     <Compile Include="Job.cs" />
     <Compile Include="Native.cs" />
     <Compile Include="ProcessExtensions.cs" />
-    <Compile Include="ProcessStarter.cs" />
+    <Compile Include="ProcessStarter32bit.cs" />
+    <Compile Include="ProcessStarter64Bit.cs" />
     <Compile Include="RemotedProcessBootstrapper.cs" />
     <Compile Include="StartProcessWithTimeout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
