Digitally sign assemblies when built in TeamCity
Add the build magic for assembly signing (ref: http://wiki/How_to_Set_Up_Visual_Studio_Projects_and_Solutions#Digital_Signatures) to assemblies which might be redistributed.

--- a/RedGate.AppHost.Client/RedGate.AppHost.Client.csproj
+++ b/RedGate.AppHost.Client/RedGate.AppHost.Client.csproj
@@ -57,6 +57,10 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <!-- Don't try to sign if it's built inside visual studio, there's probably no point -->
+  <PropertyGroup Condition="'$(BuildingInsideVisualStudio)' == ''">
+    <RedGate_DoSign>true</RedGate_DoSign>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net40\CommandLine.dll</HintPath>
