--- a/RedGate.AppHost.Client/RedGate.AppHost.Client.x64.csproj
+++ b/RedGate.AppHost.Client/RedGate.AppHost.Client.x64.csproj
@@ -59,7 +59,8 @@
   </PropertyGroup>
   <!-- Don't try to sign if it's built inside visual studio, there's probably no point -->
   <PropertyGroup Condition="'$(BuildingInsideVisualStudio)' == ''">
-    <RedGate_DontObfuscate>true</RedGate_DontObfuscate> <!-- Need to set this to tell signing task where to look for assembly -->
+    <RedGate_DontObfuscate>true</RedGate_DontObfuscate>
+    <!-- Need to set this to tell signing task where to look for assembly -->
     <RedGate_DoSign>true</RedGate_DoSign>
   </PropertyGroup>
   <ItemGroup>
@@ -83,6 +84,8 @@
   <ItemGroup>
     <Compile Include="ConsoleNativeMethods.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="ParentProcessMonitor.cs" />
+    <Compile Include="ProcessExtensions.cs" />
     <Compile Include="SafeChildProcessHandle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
