--- a/RedGate.AppHost.Server/RedGate.AppHost.Server.csproj
+++ b/RedGate.AppHost.Server/RedGate.AppHost.Server.csproj
@@ -36,7 +36,8 @@
   </PropertyGroup>
   <!-- Don't try to sign if it's built inside visual studio, there's probably no point -->
   <PropertyGroup Condition="'$(BuildingInsideVisualStudio)' == ''">
-    <RedGate_DontObfuscate>true</RedGate_DontObfuscate> <!-- Need to set this to tell signing task where to look for assembly -->
+    <RedGate_DontObfuscate>true</RedGate_DontObfuscate>
+    <!-- Need to set this to tell signing task where to look for assembly -->
     <RedGate_DoSign>true</RedGate_DoSign>
   </PropertyGroup>
   <ItemGroup>
@@ -61,6 +62,7 @@
     <Compile Include="Job.cs" />
     <Compile Include="Native.cs" />
     <Compile Include="ProcessExtensions.cs" />
+    <Compile Include="ProcessStarter.cs" />
     <Compile Include="ProcessStarter32bit.cs" />
     <Compile Include="ProcessStarter64Bit.cs" />
     <Compile Include="RemotedProcessBootstrapper.cs" />
