--- a/RedGate.AppHost.Client/RedGate.AppHost.Client.x64.csproj
+++ b/RedGate.AppHost.Client/RedGate.AppHost.Client.x64.csproj
@@ -83,8 +83,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleNativeMethods.cs" />
+    <Compile Include="HostProcessMonitor.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="ParentProcessMonitor.cs" />
     <Compile Include="ProcessExtensions.cs" />
     <Compile Include="SafeChildProcessHandle.cs" />
     <Compile Include="Program.cs" />
