Add app.manifest supporting windows 10 to apphost

--- a/RedGate.AppHost.Client/RedGate.AppHost.Client.csproj
+++ b/RedGate.AppHost.Client/RedGate.AppHost.Client.csproj
@@ -66,6 +66,9 @@
   <PropertyGroup>
     <ApplicationIcon>honeycomb.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net40\CommandLine.dll</HintPath>
@@ -107,6 +110,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
