Fix on sign and to CommanLineParser reference

--- a/RedGate.AppHost.Example.Client/RedGate.AppHost.Example.Client.csproj
+++ b/RedGate.AppHost.Example.Client/RedGate.AppHost.Example.Client.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>RedGate.AppHost.Example.Client</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>\\red-gate.com\Files\RG_Build_Key\RedGate.snk</AssemblyOriginatorKeyFile>
     <TargetFrameworkProfile />
   </PropertyGroup>
