--- a/NuSpec/RedGate.AppHost.nuspec
+++ b/NuSpec/RedGate.AppHost.nuspec
@@ -8,37 +8,37 @@
     <owners>Red Gate</owners>
     <projectUrl>https://github.com/rupertsciamenna89/RedGate.AppHost</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Provides a way to host a UI out of process and remote it in</description>
-    <summary>Provides a way to host a UI out of process and remote it in</summary>
+    <description>Provides a way to host a UI out of process and remote it in. It's a CefSharp-Remoting fork. This package must not be used for production environment. It has only educative purpose.</description>
+    <summary>Provides a way to host a UI out of process and remote it in.  It's a CefSharp-Remoting fork.</summary>
     <references>
       <reference file="RedGate.AppHost.Server.dll" />
       <reference file="RedGate.AppHost.Interfaces.dll" />
       <reference file="RedGate.AppHost.Remoting.WPF.dll" />
     </references>
-  <dependencies>
-    <dependency id="CommandLineParser" version="1.9.71" />
-  </dependencies>
+    <dependencies>
+      <dependency id="CommandLineParser" version="1.9.71" />
+    </dependencies>
   </metadata>
   <files>
     <file src="RedGate.AppHost.Client.exe" target="AppHostClientExe" />
     <file src="RedGate.AppHost.Client.pdb" target="AppHostClientExe" />
     <file src="RedGate.AppHost.Client.x64.exe" target="AppHostClientExe" />
     <file src="RedGate.AppHost.Client.x64.pdb" target="AppHostClientExe" />
-    
+
     <file src="Build\RedGate.AppHost.targets" target="Build" />
-    
-    <file src="RedGate.AppHost.Example.Client.dll" target="lib" />
-    <file src="RedGate.AppHost.Example.Server.exe" target="lib" />
-    <file src="RedGate.AppHost.Example.Remote.Services.dll" target="lib" />
-    <file src="RedGate.AppHost.Interfaces.dll" target="lib" />
-    <file src="RedGate.AppHost.Interfaces.pdb" target="lib" />
-    <file src="RedGate.AppHost.Remoting.dll" target="lib" />
-    <file src="RedGate.AppHost.Remoting.pdb" target="lib" />
-    <file src="RedGate.AppHost.Remoting.WPF.dll" target="lib" />
-    <file src="RedGate.AppHost.Remoting.WPF.pdb" target="lib" />
-    <file src="RedGate.AppHost.Server.dll" target="lib" />
-    <file src="RedGate.AppHost.Server.pdb" target="lib" />
-    
+
+    <file src="RedGate.AppHost.Example.Client.dll" target="lib\net452\" />
+    <file src="RedGate.AppHost.Example.Server.exe" target="lib\net452\" />
+    <file src="RedGate.AppHost.Example.Remote.Services.dll" target="lib\net452\" />
+    <file src="RedGate.AppHost.Interfaces.dll" target="lib\net452\" />
+    <file src="RedGate.AppHost.Interfaces.pdb" target="lib\net452\" />
+    <file src="RedGate.AppHost.Remoting.dll" target="lib\net452\" />
+    <file src="RedGate.AppHost.Remoting.pdb" target="lib\net452\" />
+    <file src="RedGate.AppHost.Remoting.WPF.dll" target="lib\net452\" />
+    <file src="RedGate.AppHost.Remoting.WPF.pdb" target="lib\net452\" />
+    <file src="RedGate.AppHost.Server.dll" target="lib\net452\" />
+    <file src="RedGate.AppHost.Server.pdb" target="lib\net452\" />
+
     <file src="RedGate.AppHost.wxs" target="WiX2\RedGate.AppHost.wxs" />
   </files>
 </package>
